Fix overflow

--- a/app/assets/styles/base/_core.scss
+++ b/app/assets/styles/base/_core.scss
@@ -20,11 +20,13 @@ body {
 main {
     flex: 1;
     background-color: var(--color-secondary);
+    overflow-x: hidden;
 }
 
 section {
     min-height: calc(100svh - 8.1rem);
     padding: 2rem 1.5rem;
+    overflow-x: hidden;
 
     @include respond-to('breakpoint-768') {
         padding: 2.5rem 5rem;
